# mesh-adapt

./: CMakeLists.txt  README.md
include/mesh_adapt/boundary/: Boundary2D.hpp  Delaunay2D.hpp  TransitionPatch2D.hpp
include/mesh_adapt/core/: Mesh2D.hpp  Mesh2DUtils.hpp  Node2D.hpp
include/mesh_adapt/geometry/: Contour2D.hpp  ContourUtils.hpp  Edge.hpp  EdgeInfo.hpp  PolygonUtils.hpp  Polyline2D.hpp  PolylineUtils.hpp  Vec2.hpp
include/mesh_adapt/io/: VTKReader2D.hpp  VTKWriter2D.hpp
include/mesh_adapt/smoothing/: LaplacianSmoother2D.hpp
include/mesh_adapt/subdivision/: MeshToSub.hpp  MeshToSub_new.hpp  QuadClassifier.hpp  QuadRefiner.hpp  QuadRefiner_new.hpp  QuadRefiner_old.hpp  QuadRefiner_orig.hpp  SubdivisionResult.hpp
include/meshadapt/core/: IRemesher2D.hpp  Mesh2D.hpp
include/meshadapt/remesh2d/: MartinsRemesher.hpp  RefinementFlags.hpp
src/: example.cpp  main.cpp
src/mesh_adapt/boundary/: Boundary2D.cpp  Delaunay2D.cpp  todo_sloan_CDT.cpp
src/mesh_adapt/core/: Contour2D.cpp  Mesh2D.cpp
src/mesh_adapt/geometry/: Polyline2D.cpp
